Code cleanup and documentation

--- a/BB_Creation.ipynb
+++ b/BB_Creation.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e570f464",
    "metadata": {},
    "outputs": [],
@@ -67,17 +67,11 @@
     "        # Disable gradient computation and reduce memory consumption.\n",
     "        with torch.no_grad():\n",
     "            for i,data  in enumerate(dataloader):\n",
-    "                #print(data)\n",
-    "                #print(data)\n",
     "                vinputs = data#next(iter(dataloader))#vdata\n",
-    "                #vtargets = move_data_to_device(vtargets, device)\n",
     "                with torch.amp.autocast(torch.device(device).type):\n",
     "                    outputs = model(vinputs.to(device))\n",
     "                    for j, out in enumerate(outputs):\n",
-    "                        #print(out)\n",
-    "                        #print(\"{}\".format(img_labels.iloc[i*batch_size+j, 0]))\n",
-    "                        #print(i*batch_size+j)\n",
-    "                        #print(out[\"boxes\"].shape[0])\n",
+    "\n",
     "                        if(out[\"boxes\"].shape[0] == 0):\n",
     "                            bb = (0.0,0.0,256.0,256.0)\n",
     "                        else:\n",
@@ -396,11 +390,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4c9d6d1d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#what dataset to generate BB for\n",
     "datasetType = \"Validation\"\n",
     "\n",
     "Train_Dataset      = ISICMaskImageDataset_for_generation(dataset, \"Training\",data_aug_type=\"1\")\n",
