--- a/Mask_RCNN.ipynb
+++ b/Mask_RCNN.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1492cc6",
+   "metadata": {},
+   "source": [
+    "Here is where I will train my Mask R-CNN model "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b601309c",
    "metadata": {},
    "source": [
@@ -26,30 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "31f79d7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using cuda device\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import multiprocessing\n",
-    "import torch.nn as nn\n",
     "import numpy as np\n",
     "#import torchvision\n",
     "import torchvision.transforms.v2 as v2\n",
     "from torchvision.utils import draw_bounding_boxes\n",
     "from torch.utils.data import  DataLoader\n",
-    "from cjm_pytorch_utils.core import  move_data_to_device\n",
+    "from cjm_pytorch_utils.core import  move_data_to_device #for moving complex data to device\n",
     "from dataloader import ISICMaskImageDataset\n",
     "\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bf8ec638",
    "metadata": {},
    "outputs": [],
@@ -81,10 +79,9 @@
     "batch_size = 8\n",
     "data_aug_type = \"1\" #what data augmentation schema to train on\n",
     "dataset = \"Dataset_2017\"\n",
-    "#transforms = dataTransforms(data_aug_type)\n",
     "\n",
     "Train_Dataset      = ISICMaskImageDataset(dataset,\"Training\",data_aug_type=data_aug_type)\n",
-    "Validation_Dataset = ISICMaskImageDataset(dataset,\"Validation\", data_aug_type=\"1\") \n",
+    "Validation_Dataset = ISICMaskImageDataset(dataset,\"Validation\", data_aug_type=\"1\") #we dont augment val or test datsets\n",
     "Test_Dataset       = ISICMaskImageDataset(dataset,\"Test\", data_aug_type=\"1\") \n",
     "\n",
     "def collate_fn(batch):\n",
@@ -97,12 +94,13 @@
     "    'pin_memory_device': 'cuda' ,  # Specifies the device where the data should be loaded. Commonly set to use the GPU.\n",
     "    'collate_fn':   collate_fn        #lambda batch: tuple(zip(*batch)),\n",
     "}\n",
+    "#if you need to change testing parameters\n",
     "data_loader_params_test = {\n",
     "    'batch_size': batch_size,  # Batch size for data loading\n",
     "    'num_workers': 0,  # Number of subprocesses to use for data loading\n",
     "    'persistent_workers': False,  # If True, the data loader will not shutdown the worker processes after a dataset has been consumed once. This allows to maintain the worker dataset instances alive.\n",
     "    'pin_memory': True,  # If True, the data loader will copy Tensors into CUDA pinned memory before returning them. Useful when using GPU.\n",
-    "    'pin_memory_device': 'cuda' ,  # Specifies the device where the data should be loaded. Commonly set to use the GPU.\n",
+    "    'pin_memory_device': 'cuda' ,  # Specifies the device where the data should be loaded.\n",
     "    'collate_fn':   collate_fn        #lambda batch: tuple(zip(*batch)),\n",
     "}\n",
     "train_dataloader      = DataLoader(Train_Dataset, **data_loader_params, shuffle=True)\n",
@@ -120,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cbd0f1cd",
    "metadata": {},
    "outputs": [],
@@ -133,7 +131,6 @@
     "    # iter(training_loader) so that we can track the batch\n",
     "    # index and do some intra-epoch reporting\n",
     "    for i, data in enumerate(training_loader):\n",
-    "        # Every data instance is an input + label pair\n",
     "        inputs, targets = data\n",
     "        inputs = torch.stack(inputs)\n",
     "\n",
@@ -143,9 +140,9 @@
     "        # Make predictions for this batch\n",
     "        with torch.amp.autocast(torch.device(device).type):\n",
     "            losses = model(inputs.to(device), move_data_to_device(targets, device))\n",
-    "            # Compute the loss and its gradients\n",
+    "            # Compute the loss and its gradients of the box predictions\n",
     "            loss = (losses[\"loss_box_reg\"]+ losses[\"loss_rpn_box_reg\"])\n",
-    "        if scaler:\n",
+    "        if scaler:#scale the loss to preven NaN's or infinity\n",
     "            scaler.scale(loss).backward()\n",
     "            scaler.step(optimizer)\n",
     "            old_scaler = scaler.get_scale()\n",
@@ -157,10 +154,7 @@
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            lr_scheduler.step()\n",
-    "        #loss.backward()\n",
     "\n",
-    "        # Adjust learning weights\n",
-    "        #optimizer.step()\n",
     "\n",
     "        # Gather data and report\n",
     "        running_loss += loss\n",
@@ -184,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "749b05c3",
    "metadata": {},
    "outputs": [],
@@ -196,26 +190,16 @@
     "EPOCHS = 30\n",
     "mask_model = maskrcnn_resnet50_fpn_v2(weights=weights, progress=False, trainable_backbone_layers=5, num_classes=None)\n",
     "loss_fn = torch.nn.L1Loss()\n",
-    "#This code if training the model from scratch that I tested but fine tuning works better for us\n",
-    "'''\n",
-    "# Get the number of input features for the classifier\n",
-    "in_features_box = mask_model.roi_heads.box_predictor.cls_score.in_features\n",
-    "in_features_mask = mask_model.roi_heads.mask_predictor.conv5_mask.in_channels\n",
-    "# Get the numbner of output channels for the Mask Predictor\n",
-    "dim_reduced = mask_model.roi_heads.mask_predictor.conv5_mask.out_channels\n",
-    "# Replace the box predictor\n",
-    "mask_model.roi_heads.box_predictor = FastRCNNPredictor(in_channels=in_features_box, num_classes=2)\n",
-    "# Replace the mask predictor\n",
-    "mask_model.roi_heads.mask_predictor = MaskRCNNPredictor(in_channels=in_features_mask, dim_reduced=dim_reduced, num_classes=2)#\n",
-    "'''\n",
+    "\n",
     "optimizer = torch.optim.SGD(mask_model.parameters(), lr=lr,weight_decay=0.00001)\n",
     "scaler = torch.amp.GradScaler(\"cuda\")\n",
+    "#change the learning rate dynmaically:\n",
     "lr_scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=0.01, total_steps=EPOCHS*len(train_dataloader))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cb2e2dbc",
    "metadata": {},
    "outputs": [],
@@ -226,7 +210,7 @@
     "    #mask_model.load_state_dict(checkpoint)\n",
     "    mask_model.to(device)\n",
     "    timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "    writer = SummaryWriter('runs/Mask_RCNN{}'.format(timestamp))\n",
+    "    writer = SummaryWriter(os.join('runs','Mask_RCNN{}'.format(timestamp)))\n",
     "    epoch_number = 0\n",
     "\n",
     "    best_vloss = 1_000_000.\n",
@@ -283,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e2139721",
    "metadata": {},
    "outputs": [],
@@ -304,11 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "79a58c9b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#function to present images with their correct and predicted bounding boxes\n",
     "def show(imgs):\n",
     "    if not isinstance(imgs, list):\n",
     "        imgs = [imgs]\n",
@@ -318,6 +303,7 @@
     "        img = v2.functional.to_pil_image(img)\n",
     "        axs[0, i].imshow(np.asarray(img))\n",
     "        axs[0, i].set(xticklabels=[], yticklabels=[], xticks=[], yticks=[])\n",
+    "#Get the first (batch_size) predicitons to print\n",
     "test_features, targets = next(iter(test_dataloader))\n",
     "mask_model.eval()\n",
     "with torch.amp.autocast(torch.device(device).type):\n",
@@ -327,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "98ba077a",
    "metadata": {},
    "outputs": [
@@ -350,6 +336,7 @@
     }
    ],
    "source": [
+    "#which image to display\n",
     "idx = 4\n",
     "img = test_features[idx].squeeze()\n",
     "label = targets[idx][\"labels\"]\n",
@@ -364,12 +351,13 @@
    "id": "162cc9c0",
    "metadata": {},
    "source": [
-    "## Testing the Model\n"
+    "## Testing the Model\n",
+    "Compute the average loss per batch on the test datset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4a3127b7",
    "metadata": {},
    "outputs": [],
@@ -391,8 +379,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12e1085c",
+   "metadata": {},
+   "source": [
+    "Add this loss to a csv for comparisons:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c27613d9",
    "metadata": {},
    "outputs": [
