--- a/Results/results.ipynb
+++ b/Results/results.ipynb
@@ -24,6 +24,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9df25409",
+   "metadata": {},
+   "source": [
+    "## Plotting models onto the ROC space"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "665da5ed",
@@ -86,6 +94,14 @@
     "ax.set_position([box.x0, box.y0, box.width * 0.7, box.height])\n",
     "ax.legend(loc = 'center left', bbox_to_anchor = (1,0.5))\n",
     "fig.savefig('ROC', dpi=600)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7ed60b6",
+   "metadata": {},
+   "source": [
+    "## Generating latex tables from our .csv files"
    ]
   },
   {
