--- a/aug_csv_gen.ipynb
+++ b/aug_csv_gen.ipynb
@@ -22,6 +22,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "549c8e9b",
+   "metadata": {},
+   "source": [
+    "## ISIC 2017 dataset class distribtuion:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "dcccb29e",
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f80bb9d0",
    "metadata": {},
    "outputs": [
@@ -100,7 +108,6 @@
     "        random_row[\"transform\"] = 1\n",
     "        new_img_labels_2 = pd.concat([new_img_labels_2,random_row],ignore_index=True)\n",
     "        i+=1\n",
-    "print(new_img_labels_2)\n",
     "print(\"New Distribution:\")\n",
     "counts = new_img_labels_2['melanoma'].value_counts()\n",
     "num_malig  = counts[1.0]\n",
@@ -122,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1fb72bf1",
    "metadata": {},
    "outputs": [
@@ -166,7 +173,6 @@
     "        counts = new_img_labels_3['melanoma'].value_counts()\n",
     "        ratio = counts[1.0]/counts[0.0]\n",
     "        i+=1\n",
-    "print(new_img_labels_3)\n",
     "print(\"New Distribution:\")\n",
     "counts = new_img_labels_3['melanoma'].value_counts()\n",
     "num_malig  = counts[1.0]\n",
@@ -183,7 +189,7 @@
    "metadata": {},
    "source": [
     "### Data Augmentation 4\n",
-    "Here we transform the malignant images and reduce the beging until we have a ratio of 1.0"
+    "Here we transform the malignant images and reduce the benign images until we have a ratio of 1.0"
    ]
   },
   {
@@ -295,7 +301,7 @@
    "metadata": {},
    "source": [
     "# Data Manipulation 7\n",
-    "Here I am just cleaning up the 2018 dataset csv's"
+    "Here I am just cleaning up the 2018 dataset csv's. Can only be run once"
    ]
   },
   {
@@ -319,6 +325,14 @@
     "new_val = val.drop(['NV','BCC','AKIEC','BKL','DF','VASC'], axis=1)\n",
     "new_val = new_val.rename(columns={'image': 'image_id', 'MEL': 'melanoma'})\n",
     "new_val.to_csv(os.path.join(dataset,os.path.join(\"Ground_Truths\", \"Validation_GroundTruth_1.csv\")), index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e26d0305",
+   "metadata": {},
+   "source": [
+    "### Data distribution of the 2018 Dataset"
    ]
   },
   {
