--- a/ResNet_Classification.ipynb
+++ b/ResNet_Classification.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "31f79d7b",
    "metadata": {},
    "outputs": [
@@ -40,13 +40,8 @@
    ],
    "source": [
     "import torch\n",
-    "#import matplotlib.pyplot as plt\n",
     "import torch.nn as nn\n",
     "import os\n",
-    "#import torchvision\n",
-    "#import torchvision.transforms.v2 as v2\n",
-    "#from torchvision.transforms.v2 import Lambda\n",
-    "#from torchvision.utils import draw_bounding_boxes\n",
     "from torch.utils.data import  DataLoader\n",
     "from dataloader import ISICClassImageDataset\n",
     "from transforms import dataTransforms\n",
@@ -71,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bf8ec638",
    "metadata": {},
    "outputs": [],
@@ -79,8 +74,11 @@
     "#constants:\n",
     "batch_size = 64\n",
     "data_aug_type = \"1\" #what data augmentation schema to train on\n",
+    "#Dataset to train on\n",
     "dataset = \"Dataset_2017\"\n",
+    "#Dataset to test on:\n",
     "test_dataset = \"Dataset_2017\"\n",
+    "#Enforce the specific requirements for each model\n",
     "if data_aug_type == \"5\":\n",
     "    dataset = dataset+\"_ph2\"\n",
     "    test_dataset = test_dataset+\"_ph2\"\n",
@@ -105,7 +103,7 @@
     "    'num_workers': 10,  # Number of subprocesses to use for data loading\n",
     "    'persistent_workers': True,  # If True, the data loader will not shutdown the worker processes after a dataset has been consumed once. This allows to maintain the worker dataset instances alive.\n",
     "    'pin_memory': True,  # If True, the data loader will copy Tensors into CUDA pinned memory before returning them. Useful when using GPU.\n",
-    "    'pin_memory_device': 'cuda' ,  # Specifies the device where the data should be loaded. Commonly set to use the GPU.\n",
+    "    'pin_memory_device': 'cuda' ,  # Specifies the device where the data should be loaded.\n",
     "}\n",
     "train_dataloader      = DataLoader(Train_Dataset, **data_loader_params, shuffle=True)\n",
     "validation_dataloader = DataLoader(Validation_Dataset, **data_loader_params, shuffle=True)\n",
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "749b05c3",
    "metadata": {},
    "outputs": [
@@ -213,6 +211,7 @@
     "fine_tune = False\n",
     "loss_weight = 0.5\n",
     "\n",
+    "#Enforce naming conventions:\n",
     "if dataset == \"Dataset_2018\":\n",
     "    ResNet_model_name = 'ResNet152_{}_{}'.format(7,loss_weight)\n",
     "else:\n",
@@ -220,6 +219,7 @@
     "ResNet_model_path = os.path.join('Trained_Models',ResNet_model_name)\n",
     "lr = 0.0001\n",
     "EPOCHS = 100\n",
+    "#Model and optimizers:\n",
     "ResNet_model = resnet152(weights=weights, progress=False)\n",
     "loss_fn = torch.nn.CrossEntropyLoss(weight=torch.tensor([1-loss_weight,loss_weight],device=device))\n",
     "ResNet_model.fc = nn.Linear(in_features=2048,out_features=2,bias=True)#change our number of classes to 2\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cb2e2dbc",
    "metadata": {},
    "outputs": [],
@@ -276,6 +276,7 @@
     "                vinputs, vtargets = vdata\n",
     "                vinputs = vinputs.to(device)\n",
     "                vtargets = vtargets.to(device)\n",
+    "                \n",
     "                #again were using AMP to allow us to train faster\n",
     "                with torch.amp.autocast(torch.device(device).type):\n",
     "                    voutputs = ResNet_model(vinputs)\n",
@@ -283,15 +284,12 @@
     "                    running_vloss += vloss\n",
     "                    _, preds = voutputs.max(1)\n",
     "                    _, vtarget = vtargets.max(1)\n",
-    "                #print((preds == vtarget).sum(), preds.size(0))\n",
     "                num_correct += (preds == vtarget).sum()\n",
     "                num_samples += preds.size(0)\n",
     "                true_malig   += torch.sum(((preds == 1.0) & (vtarget == 1.0))).item()\n",
     "                true_benign  += torch.sum(((preds == 0.0) & (vtarget == 0.0))).item()\n",
     "                total_malig  += torch.sum(preds == 1.0).item()\n",
     "                total_benign += torch.sum(preds == 0.0).item()\n",
-    "                #print(true_benign,total_benign)\n",
-    "                #print(true_malig,total_malig)\n",
     "                \n",
     "                \n",
     "        acc = float(num_correct) / num_samples\n",
@@ -326,13 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e2139721",
    "metadata": {},
    "outputs": [],
    "source": [
     "if not ResNet_model_train:\n",
-    "    \n",
     "    checkpoint = torch.load(ResNet_model_path)\n",
     "    ResNet_model.load_state_dict(checkpoint)\n",
     "    ResNet_model.to(device)"
@@ -390,8 +387,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01aaacd5",
+   "metadata": {},
+   "source": [
+    "## Generating Metrics for evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d337b348",
    "metadata": {},
    "outputs": [
@@ -433,8 +438,9 @@
     "print('Recall:', recall)\n",
     "print('F1-Score:', f1)\n",
     "print('Specificity:', specificity)\n",
-    "confusion_matrix = [[int(true_malig),int(false_malig)],[int(false_benign),int(true_benign)]]\n",
     "\n",
+    "#Print a confustion matrix for this model\n",
+    "confusion_matrix = [[int(true_malig),int(false_malig)],[int(false_benign),int(true_benign)]]\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(confusion_matrix, annot=True, fmt='d', cmap='Blues', cbar=False,\n",
     "            yticklabels=['Predicted Malignant', 'Predicted Benign'],\n",
@@ -444,21 +450,13 @@
     "plt.title('Confusion Matrix')\n",
     "plt.savefig(os.path.join('Results','{}_on_{}.png'.format(ResNet_model_name,test_dataset)), bbox_inches='tight')\n",
     "plt.show()\n",
+    "\n",
     "#generate a results csv\n",
     "row = pd.DataFrame({'Model':[ResNet_model_name],'Test Dataset':[test_dataset],'Accuracy':[acc],'Balanced Accuracy':[bal_acc],'Pecision':[precision],'Recall':[recall],'F1':[f1],'Specificity':[specificity]})\n",
     "metrics = pd.read_csv(os.path.join('Results','classification_metrics.csv'))\n",
     "metrics = pd.concat((metrics,row),ignore_index=True)\n",
+    "#save results to a csv file\n",
     "metrics.to_csv(os.path.join('Results','classification_metrics.csv'),index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "8e76316c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#metrics.to_latex(os.path.join('Results','classification_metrics.csv'),index=False)"
    ]
   }
  ],
